--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,3 +18,28 @@ a {
 * {
   box-sizing: border-box;
 }
+
+body.home {
+  background: url(/images/HomeBG.jpg);
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+body.dashboard {
+    --accent: #8855ff;
+    width: 100vw;
+    height: 100vh;
+    background: var(--accent);
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
