--- a/components/Menu/menu.module.css
+++ b/components/Menu/menu.module.css
@@ -1,24 +1,69 @@
-.window {
-    width: 480px;
-    height: 360px;
-    border-radius: 10px;
-    background: white;
-    overflow: hidden;
-    box-shadow: 0 1px 1px hsl(0deg 0% 0% / 0.075),
-        0 2px 2px hsl(0deg 0% 0% / 0.075), 0 4px 4px hsl(0deg 0% 0% / 0.075),
-        0 8px 8px hsl(0deg 0% 0% / 0.075), 0 16px 16px hsl(0deg 0% 0% / 0.075);
+.titlePage{
     display: flex;
-    flex-direction: column;
+    padding-inline: 8%;
+    padding-block-start: 2%;
+}
+
+.titleLogo{
+    border-width: 4px;
+    border-style: solid;
+    border-image: linear-gradient(circle, rgba(109,109,109,1) 0%, rgba(255,255,255,1) 74%);
+    border-radius:25px;
+    transform: rotate(45deg);
+    background-image:linear-gradient(280deg, rgba(210,103,160,1) 25%, rgba(247,200,104,1) 100%);
+}
+
+.titleLogo img{
+    transform: rotate(-45deg);
+}
+
+.titleLogo::after{
+    content: "";
+    position: absolute;
+    width: 150px;
+    height: 155px;
+    top: 0px;
+    left: 0px;
+    border: 5px solid #6d6d6d;
+    border-radius:25px;
+}
+
+.titleText{
+    background-image:linear-gradient(0deg, rgba(210,103,160,1) 55%, rgba(247,200,104,1) 100%);
+    padding-inline: 20px;
+    border-width: 4px;
+    border-style: solid;
+    border-image: linear-gradient(circle, rgba(109,109,109,1) 0%, rgba(255,255,255,1) 74%);
+}
+
+.titleText::after{
+    content: "";
+    position: relative;
+    width: 100%;
+    height: 205px;
+    top: 0px;
+    left: 0px;
+    border: 5px solid #6d6d6d;
+    border-radius:25px;
+}
+
+.window {
+    width: 100vw;
+    height: 75vh;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    margin-block-start: -4rem;
 }
 
 .nav {
-    background: #fdfdfd;
-    padding: 5px 5px 0;
+    padding: 5px 5px 0 0;
     border-radius: 10px;
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
     border-bottom: 1px solid #eeeeee;
-    height: 44px;
+    height: 80%;
+    display: flex;
+    margin: 100px 2.5% 0 2.5%;
+    width: 33%;
 }
 
 .tabs {
@@ -37,6 +82,10 @@
     font-size: 128px;
     flex-grow: 1;
     user-select: none;
+    background: white;
+    margin: 0 8% 0 4%;
+    border-radius: 10px;
+    width: 50%;
 }
 
 .ul,
@@ -52,25 +101,24 @@
 .ul {
     display: flex;
     width: 100%;
+    flex-direction: column;
+    align-items: center;
 }
 
 .li {
-    border-radius: 5px;
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
-    width: 100%;
-    padding: 10px 15px;
+    border-radius: 15px;
+    width: 80%;
+    padding: 20px 15px;
     position: relative;
-    background: white;
     cursor: pointer;
     height: 24px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex: 1;
     min-width: 0;
     position: relative;
     user-select: none;
+    background: #0000003f;margin-bottom: 1rem;
 }
 
 .underline {
@@ -83,7 +131,7 @@
 }
 
 .li.selected {
-    background: #eee;
+    background: rgb(255, 0, 0);
 }
 
 .li > button {
