--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,14 +32,13 @@ body.home {
 }
 
 body.dashboard {
-    --accent: #8855ff;
-    width: 100vw;
-    height: 100vh;
-    background: var(--accent);
-    overflow: hidden;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  --accent: #8855ff;
+  width: 100vw;
+  height: 100vh;
+  background: var(--accent);
+  overflow: hidden;
+  padding: 0;
+  margin: 0;
+  display: block;
+  position: absolute;
 }
