--- a/components/Menu/menu.module.css
+++ b/components/Menu/menu.module.css
@@ -1,50 +1,45 @@
 .titlePage{
     display: flex;
-    padding-inline: 8%;
+    padding-inline: 10%;
     padding-block-start: 2%;
 }
 
 .titleLogo{
     border-width: 4px;
     border-style: solid;
-    border-image: linear-gradient(circle, rgba(109,109,109,1) 0%, rgba(255,255,255,1) 74%);
+    border: white 5px ridge;
     border-radius:25px;
     transform: rotate(45deg);
     background-image:linear-gradient(280deg, rgba(210,103,160,1) 25%, rgba(247,200,104,1) 100%);
+    z-index: 1;
 }
 
 .titleLogo img{
     transform: rotate(-45deg);
 }
 
-.titleLogo::after{
-    content: "";
-    position: absolute;
-    width: 150px;
-    height: 155px;
-    top: 0px;
-    left: 0px;
-    border: 5px solid #6d6d6d;
-    border-radius:25px;
-}
-
 .titleText{
     background-image:linear-gradient(0deg, rgba(210,103,160,1) 55%, rgba(247,200,104,1) 100%);
-    padding-inline: 20px;
+    padding-inline: 65px;
     border-width: 4px;
     border-style: solid;
-    border-image: linear-gradient(circle, rgba(109,109,109,1) 0%, rgba(255,255,255,1) 74%);
-}
-
-.titleText::after{
-    content: "";
-    position: relative;
-    width: 100%;
-    height: 205px;
-    top: 0px;
-    left: 0px;
-    border: 5px solid #6d6d6d;
-    border-radius:25px;
+    border: white 5px ridge;
+    height: fit-content;
+    margin-left: -50px;
+    margin-left: -50px;
+    margin-top: 0px;
+    font-size: 35px;
+    font-weight: bold;
+    font-family: 'Dosis extra bold';
+    color: #fff;
+    -webkit-text-stroke: 1px black;
+    border-radius: 0 15px 15px 0;
+    -webkit-transform: skew(355deg);
+    -moz-transform: skew(355deg);
+    -ms-transform: skew(355deg);
+    -o-transform: skew(355deg);
+    transform: skew(355deg);
+    z-index: 0;
 }
 
 .window {
