--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Dosis";
+  src: url("../public/fonts/Dosis_Regular.ttf") format('truetype');
+}
+
+@font-face {
+  font-family: "Dosis bold";
+  src: url("../public/fonts/Dosis_Bold.ttf") format('truetype');
+}
+
+@font-face {
+  font-family: "Dosis extra bold";
+  src: url("../public/fonts/Dosis_ExtraBold.ttf") format('truetype');
+}
+
+@font-face {
+  font-family: "Lato";
+  src: url("../public/fonts/Lato_Regular.woff") format('woff');
+}
+
 html,
 body {
   padding: 0;
