--- a/components/Menu/menu.module.css
+++ b/components/Menu/menu.module.css
@@ -12,6 +12,8 @@
     transform: rotate(45deg);
     background-image:linear-gradient(280deg, rgba(210,103,160,1) 25%, rgba(247,200,104,1) 100%);
     z-index: 1;
+    height: fit-content;
+    height: -moz-fit-content;
 }
 
 .titleLogo img{
@@ -167,4 +169,35 @@
     opacity: 0.4;
     cursor: default;
     pointer-events: none;
+}
+
+@media (max-width: 768px){
+    .dashboard{
+        height: inherit;
+        top: 1rem;
+        display: block;
+        position: absolute;
+    }
+
+    .window{
+        flex-direction: column;
+    }
+
+    .nav{
+        width: 100%;
+        height: auto;
+    }
+
+    .ul{
+        flex-direction: row;
+    }
+
+    .main{
+        width: 100%;
+    }
+
+    .titleText{
+        padding-inline: 65px 0;
+        font-size:170%;
+    }
 }
