--- a/components/Menu/menu.module.css
+++ b/components/Menu/menu.module.css
@@ -44,6 +44,29 @@
     z-index: 0;
 }
 
+.itemMenuText{
+    background-image:linear-gradient(0deg, rgba(210,103,160,1) 55%, rgba(247,200,104,1) 100%);
+    padding-inline: 65px;
+    border-width: 4px;
+    font-style: italic;
+    border: white 5px ridge;
+    height: fit-content;
+    margin-left: -50px;
+    margin-left: -50px;
+    margin-top: 0px;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: 'Dosis extra bold';
+    color: #fff;
+    border-radius: 0 15px 15px 0;
+    -webkit-transform: skew(355deg);
+    -moz-transform: skew(355deg);
+    -ms-transform: skew(355deg);
+    -o-transform: skew(355deg);
+    transform: skew(355deg);
+    z-index: 0;
+}
+
 .window {
     width: 100vw;
     height: 75vh;
@@ -94,9 +117,6 @@
     list-style: none;
     padding: 0;
     margin: 0;
-    font-family: "Poppins", sans-serif;
-    font-weight: 500;
-    font-size: 14px;
 }
 
 .ul {
@@ -111,9 +131,6 @@
     padding: 20px 15px;
     background: #0000003f;
     margin-bottom: 1rem;
-    border-width: 4px;
-    border-style: solid;
-    border: white 5px ridge;
 }
 
 .underline {
