--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,10 +40,10 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-  margin: 0; 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 input[type=number] { -moz-appearance:textfield; }
@@ -55,6 +55,10 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+body.landing {
+  font-family: "Lato"
 }
 
 body.home {
