--- a/styles/globals.css
+++ b/styles/globals.css
@@ -100,24 +100,25 @@ body.dashboard {
   align-items: center;
 }
 
-.scrollbar::-webkit-scrollbar {
-  width: 20px;
-  height: 20px;
+.scrollbar::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
+	background-color: #6082ff;
+	border-radius: 10px;
 }
 
-.scrollbar::-webkit-scrollbar-track {
-  border-radius: 100vh;
-  background: #f7f4ed;
+.scrollbar::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #F5F5F5;
+    border-radius: 10px;
 }
 
-.scrollbar::-webkit-scrollbar-thumb {
-  background: #e0cbcb;
-  border-radius: 100vh;
-  border: 3px solid #f6f7ed;
-}
-
-.scrollbar::-webkit-scrollbar-thumb:hover {
-  background: #c0a0b9;
+.scrollbar::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	background-color: #FFF;
+	background-image: -webkit-linear-gradient(280deg, rgba(210,103,160,1) 25%, rgba(247,200,104,1) 100%);
 }
 
 .tittleMenuText{
@@ -126,8 +127,7 @@ body.dashboard {
   height: fit-content;
   margin-top: 0px;
   font-size: 28px;
-  font-weight: bold;
-  font-family: 'Dosis extra bold';
+  font-weight: 100;
   color: #fff;
   border-radius: 15px;
   z-index: 0;
@@ -156,6 +156,8 @@ body.dashboard {
   border-color: #B11A45;
   cursor: pointer;
   margin-block: 1rem;
+  width: 16rem;
+  margin-inline: auto;
 }
 
 .btnRed::after{
@@ -276,7 +278,7 @@ body.dashboard {
 .cloudAnimation{
   animation: cloudAnimation 60s linear infinite;
   content: '';
-  height: 217px;
+  height: 2rem;
   width: 9775px;
   overflow-x: hidden;
 }
